Sep 19, 2006

* Bug in allow/deny.  Alexey Ilyukhin.

Sep 15, 2006

* Enhanced logging

Sep 14, 2006

* FIXED: allow/deny code handling.  Steve Moyle.

Sep 10, 2006

* ADDED: determinism identifier 'multi'.

Sep 9, 2006

* ADDED: Line-number support for HTML source-listing.
* FIXED: reloading files involved in pldoc, such as library(lists).

Sep 8, 2006

* ADDED: View the coloured source in the browser.

* ADDED: Referencing to and reading .txt files containing Wiki-style
  information outside the source-files.

Sep 4, 2006

* DOCS: Applied various style and typo patches to the documentation.  By
  Markus Triska.

Sep 3, 2006

* FIXED: `Go': deal properly with Windows filenames and fix handling of the
  references from /directory?dir=Dir by mapping these to /doc/Dir/index.html.

Sep 1, 2006

* Renamed Depreciated --> Deprecated.  Mike Elston.

Aug 31, 2006

* First release with SWI-Prolog 5.6.18

Aug 10, 2006

* Starts getting usable :-)